applications/weather-service-dotnet/k8s/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sqldata
  name: sqldata
spec:
  ports:
    - port: 1433
      targetPort: 1433
  selector:
    app: sqldata
status:
  loadBalancer: {}
