applications/weather-service-dotnet/k8s/base/dotnet-weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnet-weather
  name: dotnet-weather
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8080
  selector:
    app: dotnet-weather
