applications/weather-service-dotnet/k8s/base/weather-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: weather-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              weather-network: "true"
  podSelector:
    matchLabels:
      weather-network: "true"
